--- a/css/style.css
+++ b/css/style.css
@@ -115,9 +115,9 @@ input[type=number]:nth-child(4){
 	color: var(--text-color-dark);
 }
 
-#border-result span{
+#border-result span{	
 	position: absolute;
-	top: 120%;
+	top: 88%;
 	left: 50%;
 	transform: translate(-50%,-50%);
 	background-color: var(--text-color);
@@ -127,8 +127,8 @@ input[type=number]:nth-child(4){
 	color: black;
 	width: 0;
 	height: 0;
-	opacity: 0;
-	transition: all 500ms ease;
+	opacity: 0;	
+	transition: all 500ms linear;
 }
 
 footer{
